fixing role and race overflow issue

--- a/sheets_app/static/sheets_app/css/styles.css
+++ b/sheets_app/static/sheets_app/css/styles.css
@@ -12,7 +12,7 @@
   --gray-800: #1f2937;
 }
 
-.listSheetsContainer{
+.listSheetsContainer {
   background-color: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(12px);
   z-index: 999;
@@ -21,32 +21,35 @@
   padding: 32px 64px;
   overflow: auto;
 }
-  
+
 .cardList {
   display: grid;
   grid-template-columns: repeat(3, 300px);
 
   gap: 16px;
 }
-  
+
 .sheetCard {
   border-radius: 4px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  backdrop-filter: blur(3px); 
-  background-color: rgba(0,0,0,0.7);
+  backdrop-filter: blur(3px);
+  background-color: rgba(0, 0, 0, 0.7);
+  overflow: hidden;
+  width: 100%;
 }
-  
-.sheetCard > div, .createSheet {
+
+.sheetCard>div,
+.createSheet {
   width: 300px;
   height: 200px;
   padding: 24px;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
   position: relative;
   border-radius: 4px;
 }
-  
+
 .createSheet {
   display: flex;
   align-items: center;
@@ -56,15 +59,15 @@
 
   background-size: cover;
   background-repeat: no-repeat;
-  
+
   transition: all .3s;
 }
-  
+
 .createSheet:hover {
   transform: translateY(-4px);
-  box-shadow: rgba(185,28,28,0.3) 0px 8px 24px;
+  box-shadow: rgba(185, 28, 28, 0.3) 0px 8px 24px;
 }
-  
+
 .createSheet div {
   display: flex;
   align-items: center;
@@ -77,20 +80,19 @@
   border: 3px dashed var(--red-700);
   color: var(--red-700);
 }
-  
+
 .createSheet:hover {
   transform: translateY(-4px);
 }
-  
+
 .sheetCard h2 {
   text-align: center;
   color: var(--gray-300);
   word-break: break-all;
-  
+
 }
 
-
-.sheet_info{
+.sheet_info {
   width: fit-content;
 }
 
@@ -106,16 +108,21 @@
 .sheet_info p {
   margin-top: 4px;
   color: var(--white);
+  word-break: break-word;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
-.title{
+.title {
   padding-bottom: 20px;
 }
 
-.sideBySide{
+.sideBySide {
   display: flex;
   align-items: center;
   /* justify-content: space-between; */
+  
 
   width: 100%;
   gap: 16px;
